--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,48 @@
         android:visibility="gone"
         android:src="@drawable/hifivesdk_icon_music_player_defaut" />
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@drawable/hifive_dialog_search_title_bg"
+        android:paddingStart="12dp"
+        android:paddingEnd="2dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@mipmap/hifivesdk_icon_music_search"/>
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:layout_marginStart="15dp"
+            android:imeOptions="actionSearch"
+            android:inputType="text|textCapSentences"
+            android:lines="1"
+            android:maxLines="1"
+            android:maxLength="50"
+            android:background="@null"
+            android:textSize="14sp"
+            android:textColorHint="#666666"
+            android:hint="@string/hifivesdk_music_search_hint"
+            android:textColor="#FFFFFF"
+            android:layout_weight="1"/>
+
+
+        <ImageView
+            android:id="@+id/iv_clear"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:padding="10dp"
+            android:visibility="gone"
+            android:src="@mipmap/hifivesdk_icon_music_delete"/>
+
+    </LinearLayout>
+
 <!--    <LinearLayout-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="wrap_content"-->
